# py-edat95

./: LICENSE  README.md  insatll.bat  install.bat  install.sh  pyproject.toml
.github/workflows/: test_installer.yml
src/: edat.py  edat_cli.py  emb_edat.py
src/edat95/: __init__.py  emb_edat.py
